@@ -1,5 +1,12 @@
-
 all:
 	@echo "Copying over the admin directory"; \
-	rm -fr admin && cp -R ../admin/ .
-
+	for file in admin/*; do \
+		if [ -f $$file -a $$file != 'admin/Makefile.am' -a $$file != 'admin/Makefile.in' ]; then \
+			/bin/rm -f $$file; \
+		fi \
+	done
+	@for file in ../admin/*; do \
+		if [ -f $$file ]; then \
+			cp -p $$file admin/; \
+		fi \
+	done
