@@ -1,0 +1,2 @@
+frameworkdir = $(kde_datadir)/kapptemplate/appframework/no-exe
+framework_DATA = COPYING INSTALL
