@@ -1,0 +1,2 @@
+existingdir = $(kde_datadir)/kapptemplate/existing
+existing_DATA = app-Makefile.am app.desktop
