@@ -1,0 +1,3 @@
+kappdir = $(kde_datadir)/kapptemplate/kapp/no-exe
+kapp_DATA = hi32-app-app.png lo16-app-app.png hi16-app-app.png  \
+	hi48-app-app.png lo32-app-app.png
