@@ -1,0 +1,5 @@
+SUBDIRS=no-exe
+
+kpartplugindir = $(kde_datadir)/kapptemplate/kpartplugin
+kpartplugin_DATA = plugin-Makefile.am plugin_app.cpp plugin_app.h \
+	plugin_app.rc hi16-action-plugin.png hi22-action-plugin.png
