@@ -1,0 +1,2 @@
+kpartplugindir = $(kde_datadir)/kapptemplate/kpartplugin/no-exe
+kpartplugin_DATA = hi16-action-plugin.png hi22-action-plugin.png
